--- a/Resume/styles.css
+++ b/Resume/styles.css
@@ -23,14 +23,34 @@ header div.rows {
 }
 
 #skills div meter {
-    flex-grow: 2;
+    flex-grow: 10;
     padding-left: 10px;
     padding-right: 10px;
 }
 
-#experience article{
+#skills div p {
+    flex-grow: 2;
+    text-align: right;
+}
+
+#experience article div.pos {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+}
+
+.pos1 {
+    flex: 1;
+    text-align: right;
+    padding-right: 10px;
+    padding-top: 6px;
+}
+
+.pos2 {
+    flex: 8;
+}
+
+p.date {
+    color:blue;
 }
 
 header a {
