--- a/Resume/styles.css
+++ b/Resume/styles.css
@@ -2,6 +2,13 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
+*::selection {
+    color:orange;
+    background-color: blue;
+}
+
+/* Header */
+
 header div.rows {
     display: flex;
     justify-content: space-between;
@@ -9,6 +16,20 @@ header div.rows {
     padding-left: 10px;
     padding-right: 10px;
 }
+
+#hero {
+    margin-right: 50px;
+    transition-property: margin-right; 
+    transition-duration: 0.01s;
+    transition-timing-function: ease;
+    transition-delay: 0s;
+}
+
+#hero:hover{
+    margin-right: 60px;
+}
+
+/* SKills */
 
 #skills {
     padding-left: 10px;
@@ -22,13 +43,19 @@ header div.rows {
     justify-content: space-between;
 }
 
+#skills div p {
+    flex-grow: 1;
+}
+
 #skills div meter {
     flex-grow: 2;
     padding-left: 10px;
     padding-right: 10px;
 }
 
-#experience article{
+/* Experience */
+
+#experience article {
     display: flex;
     flex-direction: column;
 }
@@ -40,10 +67,44 @@ header a {
 nav a {
     color: white;
     text-decoration-line: none;
+    transition-property: font-size; 
+    transition-duration: 1s;
+    transition-timing-function: ease;
+    transition-delay: 0.5s;
+}
+
+nav a:hover {
+    color: black;
+    font-size: 150%;
+}
+
+#about p::first-letter {
+    font-size: 150%;
+}
+
+meter {
+    width: 200px;
+    transition-property: width;
+    transition-duration: 2s;
+    transition-timing-function: ease;
+    transition-delay: 1s;
+}
+
+meter::-webkit-meter-optimum-value {
+    background: orange;
+}
+
+meter::-webkit-meter-bar {
+    border-radius: 20px;
+}
+
+meter:hover {
+    width: 800px;
 }
 
 .blueBG {
-    background-color: #00aaff;
+    background: linear-gradient(to bottom, #00aaff, #00ccff);
+    border-radius: 20px;
 }
 
 .blackBG {
