Adding W5D2 in class assignments. Better to be done in functions for better organization. Watch the video W5D2 in order to see how Andrew did.

--- a/jQuery Practices/W5D1/styles.css
+++ b/jQuery Practices/W5D1/styles.css
@@ -11,6 +11,11 @@
   transition: background-color 2s linear 3s;
 }
 
-#searchresults {
+.noshow {
   display: none;
+}
+
+.flex {
+  display: flex;
+  flex-direction: row;
 }
